<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="_27_u00b0">27°</string>
    <string name="_8_u00b0">8°</string>
    <string name="cloudy">Cloudy</string>
    <string name="date1">Today, October 2</string>
    <string name="picDes">Android searchcat</string>

</resources>
